--- a/tpl/default/settings.html
+++ b/tpl/default/settings.html
@@ -78,7 +78,7 @@
 			</p>
 		</fieldset>
 
-		<p><input class="Button" type="submit" value="Save"/></p>
+		<p><input class="Button" type="submit" value="Save"/><input type="hidden" name="token" value="{function="generate_token('settings_form')"}"/></p>
 	</form>
 </div>
 
@@ -92,7 +92,7 @@
 			<label for="feed_post">POST data to send to have access to the feed (JSON formatted)</label><br/>
 			<textarea name="feed_post" id="feed_post"></textarea>
 		</p>
-		<p><input class="Button" type="submit" value="Add feed"/></p>
+		<p><input class="Button" type="submit" value="Add feed"/><input type="hidden" name="token" value="{function="generate_token('add_feed')"}"/></p>
 	</form>
 	<h2>List of available feeds</h2>
 	{if="count($feeds) > 0"}
@@ -102,8 +102,8 @@
 					<td>{$value['title']}</td>
 					<td><a href="{$value['url']}">{$value['url']}</a></td>
 					<td>Edit</td>
-					<td><a href="settings.php?delete_feed={$value['id']}">Delete</a></td>
-					<td><a href="settings.php?refresh_feed={$value['id']}">Refresh</a></td>
+					<td><a href="settings.php?delete_feed={$value['id']}&amp;token={function="generate_token('delete_feed')"}">Delete</a></td>
+					<td><a href="settings.php?refresh_feed={$value['id']}&amp;token={function="generate_token('refresh_feed')"}">Refresh</a></td>
 				</tr>
 			{/loop}
 		</table>
@@ -121,6 +121,7 @@
 		<p>Import article tags as well (may import a lot of tags, depending the feed) ? <input type="radio" name="import_tags_opml" value="1" id="import_tags_yes" {$config->import_tags_from_feeds != 0 ? 'checked="checked"' : ''}/><label for="import_tags_yes"> Yes</label> <input type="radio" name="import_tags_opml" value="0" id="import_tags_no" {$config->import_tags_from_feeds == 0 ? 'checked="checked"' : ''}/><label for="import_tags_no"> No</label></p>
 		<p>
 			<input class="Button" type="submit" value="Import"/>
+			<input type="hidden" name="token" value="{function="generate_token('import_form')"}"/>
 		</p>
 	</form>
 	<h2>Export as OPML</h2>
@@ -133,7 +134,10 @@
 				{/loop}
 			</select>
 		</p>
-		<p><input class="Button" type="submit" value="Export"/></p>
+		<p>
+			<input class="Button" type="submit" value="Export"/>
+			<input type="hidden" name="token" value="{function="generate_token('export_form')"}"/>
+		</p>
 	</form>
 </div>
 {include="_end"}
